src/Smartstore.Web/wwwroot/admin/_admin.scss
/* ... */
//
// Settings Menu
// --------------------------------------------------------------

.settings-menu {
    --list-group-bg: transparent;
    --list-group-border-width: 0;
    --list-group-border-radius: 0;
    --list-group-item-padding-x: 12px;
    --list-group-item-padding-y: 10px;
    --list-group-action-color: var(--gray-700);
    --list-group-action-hover-color: var(--gray-900);
    --list-group-action-hover-bg: #{rgba($black, 0.06)};
    --list-group-action-hover-bg: var(--gray-300);
    --list-group-action-active-color: var(--list-group-action-hover-color);
    --list-group-action-active-bg: var(--gray-400);
    --list-group-active-bg: var(--list-group-action-hover-bg);

    gap: 1px;

    .list-group-item {
        @include rfs($font-size-sm);
        align-items: center !important;
        transition: background-color 0.12s ease;

        @include media-breakpoint-up(md) {
            @include border-right-radius(#{'0 !important'});
        }

        &:before {
            display: none !important;
        }

        > .list-group-item-icon {
            margin-inline-end: 1rem;

             > .bi {
                vertical-align: -3px;
            }

            > i {
                max-width: 16px;
            }
        }

        &:active:not(.active) {
            .bi-circle {
                fill: transparent;
            }
        }
    }
}


//
// Forms
// --------------------------------------------------

legend {
    font-family: $headings-font-family;
    font-weight: $headings-font-weight;
    font-size: 1.25rem;
}

.col-form-label {
    font-weight: $font-weight-medium;
}

.ctl-label {
    position: relative;
    padding-right: 2.5rem;
    display: inline-block;

    > label {
        position: relative;
        padding-right: 0;
        margin-bottom: 0.4rem;
        font-weight: $font-weight-medium;
    }

    > .hint {
        $hintColor: $gray-600;
        display: block;
        position: absolute;
        cursor: default;
        width: 2.5rem;
        right: 0;
        top: 0;
        text-decoration: none;
        outline: 0;
        color: $hintColor;
        transition: all .1s ease-in-out;
        opacity: 0;
        text-align: center;

        &:hover {
            color: $gray-700;
        }

        > i {
            font-size: 1rem;
        }
    }

    &:hover > .hint {
        opacity: 1;
    }

    .col-form-label-sm + .hint {
        width: 1rem;
        margin-bottom: 0;
        line-height: $input-line-height-sm;
        padding-top: calc(#{$input-padding-y-sm} + #{$input-border-width});
        padding-bottom: calc(#{$input-padding-y-sm} + #{$input-border-width});

        > i {
            font-size: inherit;
        }
    }
}


//
// Multi-store settings
// --------------------------------------------------

.multi-store-setting-control > input[type=checkbox] {
    position: relative;
    margin: 0;
    margin-top: $input-padding-y;
}


//
// AJAX Busy
// --------------------------------------------------

@keyframes loading {
    from {
        left: 50%;
        width: 0;
        z-index: 100;
    }

    50% {
        left: 0;
        width: 100%;
        z-index: 10;
    }

    to {
        left: 0;
        width: 100%;
    }
}

@keyframes loadingbar {
    from {
        left: -200px;
        width: 30%;
    }

    50% {
        width: 30%;
    }

    70% {
        width: 70%;
    }

    80% {
        left: 50%;
    }

    95% {
        left: 120%;
    }

    to {
        left: 100%;
    }
}

#ajax-busy {
    position: fixed;
    opacity: 0;
    left: 0;
    right: 0;
    top: 0;
    height: 3px;
    z-index: $zindex-sticky + 1;
    background-color: #ffab40;
    transition: opacity .05s ease-in;

    .sticky-header & {
        left: var(--content-padding-x);
        right: var(--content-padding-x);
    }

    body.note-fullscreen-body & {
        z-index: $zindex-tooltip + 10;
    }

    &.busy {
        opacity: 1;
    }

    &.busy > .bar {
        content: "";
        display: inline;
        position: absolute;
        width: 0;
        height: 100%;
        left: 50%;
        text-align: center;
        animation: loading 1.5s $ease-in-out-quad infinite;
    }

    > .bar:nth-child(1) {
        background-color: #fff;
    }

    > .bar:nth-child(2) {
        background-color: #3F51B5;
        animation-delay: 0.5s;
    }

    > .bar:nth-child(3) {
        background-color: #ffab40;
        animation-delay: 1s;
    }
}

.loading-bar {
    height: 4px;
    width: 100%;
    position: relative;
    overflow: hidden;
    background-color: #ddd;

    &:before {
        display: block;
        position: absolute;
        content: "";
        left: -200px;
        width: 200px;
        height: 4px;
        background-color: #2980b9;
        animation: loadingbar 2s linear infinite;
    }
}


//
// Apply grid layout to editor tables (.adminContent)
// --------------------------------------------------

.adminContent {
    --adminRow-width: 1000px;
    --adminTitle-width: 0.4;
    --adminContent-width: 0.6;
    --adminRow-margin-y: 0.8rem;

    display: block;
    width: 100%;
    margin-inline: auto;
    padding-inline: 0;
    border-collapse: initial;

    &.adminContent-boxed {
        --adminContent-padding: 1rem;
        padding-inline: 1rem;
    }
}

.adminRow {
    display: flex;
    flex-wrap: wrap;
    margin-block: var(--adminRow-margin-y, 0.8rem);
    margin-inline: 0 !important;

    &:first-child {
        margin-top: 0;
    }
}

.adminTitle,
.adminData {
    position: relative;
    display: block;
    @include make-col-ready();
    padding-inline: 0;
}

.adminTitle {
    margin-bottom: 0;
}

.adminData {
    select,
    input,
    textarea,
    .uneditable-input,
    .input-append,
    .input-prepend {
        margin-bottom: 0 !important;
    }
}
/* ... */

